fix (index): project thumbnail no outline on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -203,6 +203,7 @@
   height: auto;
   object-fit: cover;
   aspect-ratio: 650 / 274;
+  outline: 1px solid #ffffff;
 }
 
 .project-card__title {
@@ -252,9 +253,6 @@
   }
   .project-card {
     grid-column: span 3;
-  }
-  .project-card__thumbnail {
-    outline: 1px solid #ffffff;
   }
   #take-a-break,
   #marmite-joyeuse {
